--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -55,8 +56,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation "io.reactivex.rxjava2:rxjava:2.2.18"
     lintChecks project(":lint_sample")
-    lintPublish project(":lintaar")
-//    lintChecks project(":lintaar")
+//    lintPublish project(":lintaar")
 }
 
 
